--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
 			</p>
 		</header>
 
-		<main class="flex-row justify-space-between"></main>
+		<main class="flex-row justify-space-between">
+			<div class="col-12 col-md-4">
+				<div class="card">
+					<h3 class="card-header text-uppercase">Search By User</h3>
+					<form action="" id="user-form" class="card-body">
+						<label for="username" class="form-label">Username</label
+						><input type="text" name="username" autofocus="true" id="username" class="form-input" /><button
+							class="btn"
+							type="submit"
+						>
+							Get User
+						</button>
+					</form>
+				</div>
+			</div>
+			<div class="col-12 col-md-8"></div>
+		</main>
 		<script src="./assets/js/homepage.js"></script>
 	</body>
 </html>
